rpi_cluster/transmission/transmission-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: home
spec:
  selector:
    app:  transmission
  type: NodePort  
  ports:
    - port: 9091
      targetPort: 9091 
      nodePort: 32010
