rpi_cluster/transmission/transmission-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transmission
  namespace: home
spec:
  hosts:
  - "transmission.horibe.com.br"
  gateways:
  - default-ingress.default
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9091
        host: transmission
